Reapply "A"
This reverts commit 323b2eac99dd592173413f7c19fc52625e2d5474.
